--- a/css/style.css
+++ b/css/style.css
@@ -423,7 +423,7 @@ a:focus{
 }
 
 .our-sponsors .sponsors .sponsor a {
-	background-color: #00a3e8;
+	background-color: #FFF;
 	margin-bottom: 4px;
 	height: 236px;
 	display: block;
@@ -434,7 +434,8 @@ a:focus{
 }
 
 .our-sponsors .sponsors .sponsor a:hover {
-	background-color: rgba(0, 163, 232, 0.3);
+	/*background-color: rgba(0, 163, 232, 0.3); */
+	background-color: rgba(255, 255, 255, 0.9);
 	-webkit-box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.33);
 	   -moz-box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.33);
 	        box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.33);
