--- a/css/style.css
+++ b/css/style.css
@@ -435,7 +435,7 @@ a:focus{
 
 .our-sponsors .sponsors .sponsor a:hover {
 	/*background-color: rgba(0, 163, 232, 0.3); */
-	background-color: rgba(255, 255, 255, 0.9);
+	background-color: #FFF;
 	-webkit-box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.33);
 	   -moz-box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.33);
 	        box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.33);
