Neues Logo und neues Footer-Bild

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -543,7 +543,7 @@ a:focus{
 *************************/
 
 #footer {
-	background: url(../images/footer-bg.jpg) no-repeat;
+	background: url(../images/footer_bg2.jpg) no-repeat;
 	text-align: center;
 	width: 100%;
 	-webkit-background-size: cover;
