--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,6 +279,11 @@ ul.nav li.dropdown:hover ul.dropdown-menu{
 	padding-top: 95px;
 }
 
+.know-about-us h2{
+	padding-top: 24px;
+	font-size: 24px;
+}
+
 .know-about-us .text {
 	width: 68%;
 	float: right;
