--- a/bcruhr9/assets/css/style.css
+++ b/bcruhr9/assets/css/style.css
@@ -579,13 +579,14 @@ ul.nav li.dropdown:hover ul.dropdown-menu{
 *************************/
 
 #footer {
-	background: url(../images/footer_bg2.jpg) no-repeat;
+	background: url(../images/bg-footer.jpg) no-repeat;
 	text-align: center;
 	width: 100%;
 	-webkit-background-size: cover;
 	   -moz-background-size: cover;
 	     -o-background-size: cover;
 	        background-size: cover;
+	min-height: 320px;	        
 }
 
 #footer h2 {
@@ -595,34 +596,43 @@ ul.nav li.dropdown:hover ul.dropdown-menu{
 	font-weight: bold;
 }
 
-#footer .copyright {
+#footer2{
+	text-align: center;
+	background: url(../images/section-1-bg.jpg) repeat;
+}
+
+#footer2 .copyright {
 	color: #46667A;
 	margin-bottom: 25px;
 }
 
-#footer .btn-red-large {
+#footer2 .copyright:last-child{
+	margin-bottom: 0px;	
+}
+
+#footer2 .btn-red-large {
 	margin-bottom: 210px;
 	padding-left: 24px !important;
 }
 
-#footer .btn-red-large span {
+#footer2 .btn-red-large span {
 	background: url(../images/icons/euro-bg.jpg) no-repeat left;
 	padding-left: 20px;
 	margin-right: -16px;
 	margin-left: 13px;
 }
 
-#footer .social-icons {
+#footer2 .social-icons {
 	margin-bottom: 0px;
 	padding-bottom: 10px;
 }
 
-#footer .social-icons li {
+#footer2 .social-icons li {
     display: inline-block;
     margin: 5px;
 }
 
-#footer .social-icons li:hover {
+#footer2 .social-icons li:hover {
 	opacity: 0.7;
 }
 
