--- a/bcruhrX/assets/css/style.css
+++ b/bcruhrX/assets/css/style.css
@@ -304,6 +304,10 @@ ul.nav li.dropdown:hover ul.dropdown-menu{
 	max-width: 520px;
 }
 
+.know-about-us .center {
+	padding-bottom: 40px;
+}
+
 /*************************
 **** =teaser
 *************************/
