--- a/bcruhr12/assets/css/main.css
+++ b/bcruhr12/assets/css/main.css
@@ -105,6 +105,7 @@ textarea {
 		-webkit-text-size-adjust: 100%;
 		-ms-text-size-adjust: 100%;
 		background-color: #DBDBDB;
+        color: #4A4A4A;
     }
 
     h2 {
@@ -114,7 +115,21 @@ textarea {
         text-align: center;
         color: #5DC127;
         text-transform: uppercase;
-    }      
+    }
+
+    h3{
+        font-family: 'Montserrat', Arial, sans-serif;
+        font-size: 26px;
+        font-weight: bold;
+        margin-bottom: 0px;
+    }
+
+    p{line-height: 1.89;}      
+
+
+    a{
+        color: #5DC127;
+    }
 
    	#page{
    		margin: 0 auto;
@@ -249,10 +264,55 @@ textarea {
         width: 100%;
     }
 
+    .kontakt{
+        display: grid;
+        grid-template-columns: 1fr 1fr; 
+        grid-gap: 20px;
+        margin: 0 10%;
+    }
+
+    .kontakt div {
+        border: solid 1px rgba(151, 151, 151, 0.22);
+        border-radius: 8px;
+        padding: 0 50px 50px;
+    }
+
+    #location{
+        background: url(../images/icon_pin.png) no-repeat center left;
+        padding-left: 30px;
+    }
+
+    #newsletter{
+        background: url(../images/icon_brief.png) no-repeat center left;
+        padding-left: 30px;
+    }
+
+    .kontakt input{
+        border-radius: 100px;
+        border: solid 2px #5DC127;
+        background-color: #ffffff;
+        color: #5DC127;
+        font-size: 16px;
+        padding: 10px 24px;
+        margin-right: 20px;S
+    }
+
+    .kontakt input[type="submit"]{
+        background-color: #5DC127;
+        color: #FFF; 
+    }
+
+    .hinweis{
+        font-size: 13px;
+        font-style: italic;
+        line-height: 1.2;
+    }
+    
 
     footer{
         background-color: #5DC127;
         padding: 2.2em 210px;
+        margin-top: 50px;
     }
 
     footer ul{
